fixed the horizontal scrolling in firefox

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@ body {
   font-size: 100%;
   scroll-behavior: smooth;
   background: #000000 !important;
-  /* overflow-x: hidden !important; */
+  overflow-x: hidden !important;
 }
 
 /* Root */
